app/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: app1.singorojo.my.id
    http:
      paths:
      - backend:
          service:
            name: webapp1-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: app2.singorojo.my.id
    http:
      paths:
      - backend:
          service:
            name: webapp2-svc
            port:
              number: 80
        path: /
        pathType: Prefix
